load some animation to web

--- a/index.html
+++ b/index.html
@@ -23,6 +23,11 @@
         <div class="product__item">
             <div class="product__picture">
                 <img src="http://mvbinz.xyz/images/1.jpg" alt="" class="picture">
+                <ul class="action">
+                    <li><i class="fa fa-heart" aria-hidden="true"></i><span>Add to Wishlist</span></li>
+                    <li><i class="fa fa-shopping-cart" aria-hidden="true"></i><span>Add to Cart</span></li>
+                    <li><i class="fa fa-eye" aria-hidden="true"></i><span>Add to Details</span></li>
+                </ul>
             </div>
             <div class="product_detail">
                 <div class="product-name">Rayon a-line Dress</div>
@@ -44,9 +49,14 @@
         <div class="product__item">
             <div class="product__picture">
                 <img src="http://mvbinz.xyz/images/2.jpg" alt="" class="picture">
+                <ul class="action">
+                    <li><i class="fa fa-heart" aria-hidden="true"></i><span>Add to Wishlist</span></li>
+                    <li><i class="fa fa-shopping-cart" aria-hidden="true"></i><span>Add to Cart</span></li>
+                    <li><i class="fa fa-eye" aria-hidden="true"></i><span>Add to Details</span></li>
+                </ul>
             </div>
             <div class="product_detail">
-                <div class="product-name">Rayon a-line Dress</div>
+                <div class="product-name">Black men Watch</div>
                 <div class="product-moreDetails">
                   <div class="product__price">$13.45</div>    
                     <div class="product__rate">
@@ -54,7 +64,7 @@
                             <li class="star starYellow"></li>
                             <li class="star starYellow"></li>
                             <li class="star starYellow"></li>
-                            <li class="star starYellow"></li>
+                            <li class="star starGrey"></li>
                             <li class="star starGrey"></li>
                         </ul>
                     </div>
@@ -65,9 +75,14 @@
         <div class="product__item">
             <div class="product__picture">
                 <img src="http://mvbinz.xyz/images/3.jpg" alt="" class="picture">
+                <ul class="action">
+                    <li><i class="fa fa-heart" aria-hidden="true"></i><span>Add to Wishlist</span></li>
+                    <li><i class="fa fa-shopping-cart" aria-hidden="true"></i><span>Add to Cart</span></li>
+                    <li><i class="fa fa-eye" aria-hidden="true"></i><span>Add to Details</span></li>
+                </ul>
             </div>
             <div class="product_detail">
-                <div class="product-name">Rayon a-line Dress</div>
+                <div class="product-name">Men's Regular Fit Shirts</div>
                 <div class="product-moreDetails">
                   <div class="product__price">$13.45</div>    
                     <div class="product__rate">
@@ -76,7 +91,7 @@
                             <li class="star starYellow"></li>
                             <li class="star starYellow"></li>
                             <li class="star starYellow"></li>
-                            <li class="star starGrey"></li>
+                            <li class="star starYellow"></li>
                         </ul>
                     </div>
                 </div>
@@ -86,9 +101,14 @@
         <div class="product__item">
             <div class="product__picture">
                 <img src="http://mvbinz.xyz/images/4.jpg" alt="" class="picture">
+                <ul class="action">
+                    <li><i class="fa fa-heart" aria-hidden="true"></i><span>Add to Wishlist</span></li>
+                    <li><i class="fa fa-shopping-cart" aria-hidden="true"></i><span>Add to Cart</span></li>
+                    <li><i class="fa fa-eye" aria-hidden="true"></i><span>Add to Details</span></li>
+                </ul>
             </div>
             <div class="product_detail">
-                <div class="product-name">Rayon a-line Dress</div>
+                <div class="product-name">Men's Handbag</div>
                 <div class="product-moreDetails">
                   <div class="product__price">$13.45</div>    
                     <div class="product__rate">
@@ -97,7 +117,7 @@
                             <li class="star starYellow"></li>
                             <li class="star starYellow"></li>
                             <li class="star starYellow"></li>
-                            <li class="star starGrey"></li>
+                            <li class="star starYellow"></li>
                         </ul>
                     </div>
                 </div>
@@ -107,9 +127,14 @@
         <div class="product__item">
             <div class="product__picture">
                 <img src="http://mvbinz.xyz/images/5.jpg" alt="" class="picture">
+                <ul class="action">
+                    <li><i class="fa fa-heart" aria-hidden="true"></i><span>Add to Wishlist</span></li>
+                    <li><i class="fa fa-shopping-cart" aria-hidden="true"></i><span>Add to Cart</span></li>
+                    <li><i class="fa fa-eye" aria-hidden="true"></i><span>Add to Details</span></li>
+                </ul>
             </div>
             <div class="product_detail">
-                <div class="product-name">Rayon a-line Dress</div>
+                <div class="product-name">Women's Relaxed Fit Jeans</div>
                 <div class="product-moreDetails">
                   <div class="product__price">$13.45</div>    
                     <div class="product__rate">
@@ -118,7 +143,7 @@
                             <li class="star starYellow"></li>
                             <li class="star starYellow"></li>
                             <li class="star starYellow"></li>
-                            <li class="star starGrey"></li>
+                            <li class="star starYellow"></li>
                         </ul>
                     </div>
                 </div>
@@ -128,9 +153,14 @@
         <div class="product__item">
             <div class="product__picture">
                 <img src="http://mvbinz.xyz/images/6.jpg" alt="" class="picture">
+                <ul class="action">
+                    <li><i class="fa fa-heart" aria-hidden="true"></i><span>Add to Wishlist</span></li>
+                    <li><i class="fa fa-shopping-cart" aria-hidden="true"></i><span>Add to Cart</span></li>
+                    <li><i class="fa fa-eye" aria-hidden="true"></i><span>Add to Details</span></li>
+                </ul>
             </div>
             <div class="product_detail">
-                <div class="product-name">Rayon a-line Dress</div>
+                <div class="product-name">Round Neck Printed Top</div>
                 <div class="product-moreDetails">
                   <div class="product__price">$13.45</div>    
                     <div class="product__rate">
@@ -139,7 +169,7 @@
                             <li class="star starYellow"></li>
                             <li class="star starYellow"></li>
                             <li class="star starYellow"></li>
-                            <li class="star starGrey"></li>
+                            <li class="star starYellow"></li>
                         </ul>
                     </div>
                 </div>
@@ -149,9 +179,14 @@
         <div class="product__item">
             <div class="product__picture">
                 <img src="http://mvbinz.xyz/images/7.jpg" alt="" class="picture">
+                <ul class="action">
+                    <li><i class="fa fa-heart" aria-hidden="true"></i><span>Add to Wishlist</span></li>
+                    <li><i class="fa fa-shopping-cart" aria-hidden="true"></i><span>Add to Cart</span></li>
+                    <li><i class="fa fa-eye" aria-hidden="true"></i><span>Add to Details</span></li>
+                </ul>
             </div>
             <div class="product_detail">
-                <div class="product-name">Rayon a-line Dress</div>
+                <div class="product-name">Mens Running Shoe</div>
                 <div class="product-moreDetails">
                   <div class="product__price">$13.45</div>    
                     <div class="product__rate">
@@ -160,7 +195,7 @@
                             <li class="star starYellow"></li>
                             <li class="star starYellow"></li>
                             <li class="star starYellow"></li>
-                            <li class="star starGrey"></li>
+                            <li class="star starYellow"></li>
                         </ul>
                     </div>
                 </div>
@@ -170,9 +205,14 @@
         <div class="product__item">
             <div class="product__picture">
                 <img src="http://mvbinz.xyz/images/8.jpg" alt="" class="picture">
+                <ul class="action">
+                    <li><i class="fa fa-heart" aria-hidden="true"></i><span>Add to Wishlist</span></li>
+                    <li><i class="fa fa-shopping-cart" aria-hidden="true"></i><span>Add to Cart</span></li>
+                    <li><i class="fa fa-eye" aria-hidden="true"></i><span>Add to Details</span></li>
+                </ul>
             </div>
             <div class="product_detail">
-                <div class="product-name">Rayon a-line Dress</div>
+                <div class="product-name">Men Pullover Sweater</div>
                 <div class="product-moreDetails">
                   <div class="product__price">$13.45</div>    
                     <div class="product__rate">
@@ -181,7 +221,7 @@
                             <li class="star starYellow"></li>
                             <li class="star starYellow"></li>
                             <li class="star starYellow"></li>
-                            <li class="star starGrey"></li>
+                            <li class="star starYellow"></li>
                         </ul>
                     </div>
                 </div>
